# Computational-Geometry

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  convex_hull.py  geometry.py  line_segment_intersection.py  plot.py
.github/workflows/: ci.yml
scripts/: assemble_polygons.py  segment_intersections.py  showcase_assemble_polygons.py  showcase_assemble_rings.py  showcase_convex_hull.py  showcase_geometry_primitives.py  showcase_overlay.py  showcase_polygon_and.py  showcase_polygon_difference.py  showcase_polygon_or.py  showcase_polygon_xor.py  showcase_segment_intersections.py
src/algorithms/: assemble.cpp  assemble.hpp  convex_hull.cpp  convex_hull.hpp  horizontal_ray_query.cpp  horizontal_ray_query.hpp  line_segment_intersection.cpp  line_segment_intersection.hpp  overlay.cpp  overlay.hpp  sweep_line.cpp  sweep_line.hpp
src/cli/: arg_parser.cpp  arg_parser.hpp  main.cpp  operations.cpp  operations.hpp
src/debug/: logging.cpp  logging.hpp
src/geometry/: dcel.cpp  dcel.hpp  intersection.cpp  intersection.hpp  polygon.cpp  polygon.hpp  predicates.cpp  predicates.hpp  random.cpp  random.hpp  segment.cpp  segment.hpp  vector.cpp  vector.hpp
src/gui/: controller.cpp  controller.hpp  main.cpp  plot.cpp  plot.hpp
src/io/: document.cpp  document.hpp  geometry_io.cpp  geometry_io.hpp
src/python/: algorithm_bindings.cpp  bindings.cpp  bindings.hpp  document_bindings.cpp  geometry_bindings.cpp  gui_bindings.cpp
tests/: algorithm_tests.cpp  cgeom.py  geometry_tests.cpp  gui_tests.cpp
